<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Dunkin Leb</string>
    <string name="facebook_app_id">3174642972749803</string>
    <string name="fb_login_protocol_scheme">fb3174642972749803</string>
    <string name="facebook_client_token">f550badb22fec5e978325d7f3a1d88cd</string>
    <string name="google_id" translatable="false">AIzaSyAHzEEEadS4uCmVkeLS8mazKMIHfnt62-I</string>
    <string name="lbl_app_version" translatable="false">V4.0.11032019</string>
    <string name="lbl_consulting_website" translatable="false">Meeting Point &amp; MindSource Consulting Copyright © 2019</string>
    <string name="strp">Mind#S@urce#@201</string>
    <string name="stral">AES</string>
    <string name="network_error">No internet connectivity.</string>
    <string name="processing">Processing &#8230; </string>
    <string name="al_ok">Okay</string>
    <string name="txt_ok">Ok</string>
    <string name="al_cancel">Cancel</string>
    <string name="txt_skip">Skip</string>
    <string name="txt_scan">Scan</string>
    <string name="err_scan_and_win">There is no scope for Scan and Win.</string>
    <string name="al_warning">@string/app_name</string>
    <string name="al_warning_redeem">Redeem Confirmation</string>
    <string name="al_exit_message">Do you want to log out from application ?</string>
    <string name="al_yes">YES</string>
    <string name="al_no">NO</string>
    <string name="al_close">Close</string>
    <string name="al_try_again">Try Again</string>
    <string name="no_data_error">Nothing to see yet.</string>
    <string name="system_error">There may be some data problem or network problem. try again after sometime.</string>
    <string name="txt_hint_feedback_message">Enter Feedback Here</string>
    <string name="msg_feedback_success">Feedback Posted Successfully</string>
    <string name="txt_select_restaurant">Select Branch</string>
    <string name="txt_hello">Hello %1$s !</string>
    <string name="txt_avarage_ratings">Average Rating : %1$s </string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_date_of_birth">Date Of Birth</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="lbl_shipping_address_same">Shipping address same as above.</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_shipping_address">Shipping Address</string>
    <string name="hint_address">Address</string>
    <string name="hint_crdc_month">MM</string>
    <string name="hint_crdc_year">YYYY</string>
    <string name="hint_cardholder_name">Name On The Card</string>
    <string name="empty_first_name">Please Enter First Name</string>
    <string name="is_valid_name_string">%1$s should not contain any special character or number</string>
    <string name="empty_last_name">Please Enter Last Name</string>
    <string name="empty_date_of_birth">Please Enter date of birth</string>
    <string name="min_val_date_of_birth">Date of birth should be less than current date.</string>
    <string name="invalid_email">Entered E-Mail is not valid</string>
    <string name="empty_password">Please Enter Password</string>
    <string name="empty_conform_password">Please Confirm Your Password</string>
    <string name="min_length_password">Password must be at least 6 characters long</string>
    <string name="password_is_not_match">Password and confirm password does not match.</string>
    <string name="empty_phone_number">Please Enter Phone Number</string>
    <string name="min_length_phone_number">Phone number must between 8 to 15 digit long.</string>
    <string name="empty_address">Please Enter Address</string>
    <string name="empty_shipping_address">Please Enter Shipping Address</string>
    <string name="empty_cardholder_name">Please Enter Card Holder Name</string>
    <string name="empty_card_number">Please Enter Credit Card Number</string>
    <string name="min_length_card_number">Card number should be at least 16 digit long</string>
    <string name="min_length_expiry_year">Expiry Year must be 4 digit long</string>
    <string name="min_length_expiry_month">Expiry Month must be 2 digit long</string>
    <string name="max_val_expiry_month">Expiry Month must between 01 to 12.</string>
    <string name="min_val_expiry_year">Expiry Year must be current or greater than current year.</string>
    <string name="min_val_expiry_month_current">Expiry Month should be greater or equal than current month.</string>
    <string name="btn_email">E-Mail</string>
    <string name="btn_call">Call</string>
    <string name="btn_share">Share on FB</string>
    <string name="msg_share_success">Share successfully.</string>
    <string name="txt_share_comment">Enter Comment</string>
    <string name="txt_select_country">Select Country</string>
    <string name="txt_set_fav_restaurant">Choose your favorite location</string>
    <string name="hint_password">Password</string>
    <string name="btn_signin">Sign In</string>
    <string name="txt_or">or</string>
    <string name="btn_signup">Sign up</string>
    <string name="txt_forgot_pass">Forgot Your Password?</string>
    <string name="btn_back">Back</string>
    <string name="hint_email">Email Address</string>
    <string name="btn_submit">Submit</string>
    <string name="empty_email">Please Enter Email Address</string>
    <string name="msg_fp_response_success">Password reset link sent to your e-mail</string>
    <string name="msg_fp_failure_status_2">E-mail sending failed. try again.</string>
    <string name="txt_return_to_sign_in">Return to Sign in</string>
    <string name="nav_home">My Home</string>
    <string name="nav_offer">Deal</string>
    <string name="nav_offer2">Offers</string>
    <string name="nav_event">Events</string>
    <string name="nav_celebration">Celebration</string>
    <string name="nav_news">News</string>
    <string name="nav_news_event">Happenings</string>
    <string name="nav_coupons">Redeem</string>
    <string name="nav_coupons2">Rewards</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_scanner">Scanner</string>
    <string name="nav_near_restaurant">Find us</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_my_point">My Points</string>
    <string name="nav_notification">My Notifications </string>
    <string name="txt_points">Points</string>
    <string name="nav_products">Products</string>
    <string name="nav_cart">My Order</string>
    <string name="nav_recurrent_order">Recurrent Order</string>
    <string name="nav_wallet">Pay</string>
    <string name="nav_manage_card">Refill</string>
    <string name="nav_scan_and_win">Rewards</string>
    <string name="nav_order_history">My Favorites</string>
    <string name="nav_order_history2">Order History</string>
    <string name="nav_payment">Payment</string>
    <string name="nav_get_bill">Get Bill</string>
    <string name="nav_scratch_card">Fun n Games</string>
    <string name="nav_contact_us">Talk to us </string>
    <string name="nav_about_us">FAQ</string>
    <string name="nav_rating">Your Feedback Counts</string>
    <string name="nav_staff_rating">Rate Staff</string>
    <string name="nav_exit">Log out</string>
    <string name="home_welcome_text">WELCOME TO DUNKIN DONUTS</string>
    <string name="txt_event_name">Title</string>
    <string name="txt_event_start_date">Start Date</string>
    <string name="txt_event_end_date">End Date</string>
    <string name="txt_event_place">Place</string>
    <string name="txt_event_description">Description</string>
    <string name="txt_offre_validat_days">Valid No. Of Days</string>
    <string name="txt_offre_per_days">Items Per Day</string>
    <string name="txt_times_redeem">Used Redeem</string>
    <string name="txt_times_redeem2">Used</string>
    <string name="txt_total_times_redeem">Total Redeem</string>
    <string name="txt_total_times_redeem2">Total</string>
    <string name="txt_remaining_times_redeem">Remaining Redeem</string>
    <string name="txt_remaining_times_redeem4">Remaining</string>
    <string name="txt_remaining_times_redeem2">Remaining Redeem: </string>
    <string name="txt_remaining_times_redeem3">Remaining Item: </string>
    <string name="txt_availed_product">Free Availed: %1$s</string>
    <string name="txt_availed_product_not">Free Not Availed</string>
    <string name="txt_free_product_available">Free Available: %1$s</string>
    <string name="txt_offre_free_type">Offer Type</string>
    <string name="txt_free_type">Free</string>
    <string name="txt_free_type2">%1$s Free</string>
    <string name="num_of_buy_products">%1$s Buy</string>
    <string name="num_of_free_products">%1$s Get</string>
    <string name="num_of_buy_products2">Buy %1$s</string>
    <string name="num_of_free_products2">Get %1$s</string>
    <string name="txt_not_free_type">Paid</string>
    <string name="txt_offer_code">Offer Code</string>
    <string name="lbl_offer_product">Offer Product Information</string>
    <string name="tab_offer_1">@string/nav_offer2</string>
    <string name="tab_offer_2">Offer History</string>
    <string name="lbl_offer_name">Offer Title</string>
    <string name="lbl_offer_points">Required Points</string>
    <string name="lbl_offer_total_points">Total Points</string>
    <string name="txt_to">%1$s To %2$s</string>
    <string name="txt_news_title">Title</string>
    <string name="txt_news_date">News Date</string>
    <string name="txt_news_place">Place</string>
    <string name="txt_news_description">Description</string>
    <string name="msg_ask_topping_add">Do you want to add toppings?</string>
    <string name="msg_al_add_topping_add_ons">Do you want to add \"Add-Ons\"?</string>
    <string name="txt_add_to_cart">Add To Order</string>
    <string name="msg_product_remove_confirmation">Do you want to remove item from order?</string>
    <string name="txt_add_topping">Add ons</string>
    <string name="btn_add_toppings2">Add-Ons</string>
    <string name="msg_add_to_cart">Item added to order</string>
    <string name="btn_done">Done</string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="txt_contact_description">Message</string>
    <string name="empty_name">Please Enter Name</string>
    <string name="empty_description">Please Enter Message</string>
    <string name="txt_contact_success">Thank you! Message sent successfully</string>
    <string name="txt_lost_game">Sorry!!! You lost the game.</string>
    <string name="txt_win_game">You won the game and received %1$s points.</string>
    <string name="msg_scratch_card_error">Your today\'s attempt completed. try again next day.</string>
    <string name="lbl_order_detail">Order Detail</string>
    <string name="lbl_recurrent_order">Recurrent Order</string>
    <string name="lbl_language">Language</string>
    <string name="lbl_small_language">Change Language</string>
    <string name="MON">MON</string>
    <string name="TUE">TUE</string>
    <string name="WED">WED</string>
    <string name="THU">THU</string>
    <string name="FRI">FRI</string>
    <string name="SAT">SAT</string>
    <string name="SUN">SUN</string>
    <string name="txt_start_date">Start date</string>
    <string name="txt_endt_date">End date</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="txt_payment_type2">Payment Type</string>
    <string name="msg_order_for_today">Do you want to place this order for today ?</string>
    <string name="for_today_order">For Today Order</string>
    <string name="for_recurrent_order">For Recurrent Order</string>
    <string name="add_any_comment">Add any comment</string>
    <string name="txt_continue">Continue</string>
    <string name="txt_cancel">Cancel</string>
    <string name="enter_comment">Enter comment</string>
</resources>