<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_with_shadow"
    android:layout_gravity="center"
    android:padding="@dimen/ten_dp"
    android:layout_margin="@dimen/twentyTwo_dp">

    <com.dunkin.customer.widget.CustomTextView3
        android:id="@+id/txtAddAnyComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_any_comment"
        android:layout_gravity="center"
        android:textColor="@android:color/black"/>

    <com.dunkin.customer.widget.CustomEditText
        android:id="@+id/etComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/enter_comment"
        android:textColor="@android:color/black"
        android:background="@drawable/edit_bg_black"
        android:padding="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end|right">

        <com.dunkin.customer.widget.CustomButton
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_continue"
            android:textAllCaps="false"
            android:background="@color/white"/>

        <com.dunkin.customer.widget.CustomButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_cancel"
            android:textAllCaps="false"
            android:background="@color/white"/>

    </LinearLayout>

</LinearLayout>